[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tiles/Background.tres" type="TileSet" id=1]
[ext_resource path="res://User Interface/PixelFont.tres" type="Theme" id=2]
[ext_resource path="res://Tiles/Foreground.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=4]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=5]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0 )

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 1, 0, 131109, 0, 0, 131110, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 1, 0, 196644, 1, 0, 196645, 0, 0, 196646, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 1, 0, 262180, 1, 0, 262181, 0, 0, 262182, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 1, 0, 327716, 1, 0, 327717, 0, 0, 327718, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 1, 0, 393252, 1, 0, 393253, 0, 0, 393254, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 1, 0, 458788, 1, 0, 458789, 0, 0, 458790, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 1, 0, 524324, 1, 0, 524325, 0, 0, 524326, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 1, 0, 589860, 1, 0, 589861, 0, 0, 589862, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 1, 0, 655396, 1, 0, 655397, 0, 0, 655398, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 1, 0, 720932, 1, 0, 720933, 0, 0, 720934, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 1, 0, 786468, 1, 0, 786469, 0, 0, 786470, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 1, 0, 852004, 1, 0, 852005, 0, 0, 852006, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 1, 0, 917540, 1, 0, 917541, 0, 0, 917542, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 1, 0, 983076, 1, 0, 983077, 0, 0, 983078, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 1, 0, 1048612, 1, 0, 1048613, 0, 0, 1048614, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 1, 0, 1114148, 1, 0, 1114149, 0, 0, 1114150, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 1, 0, 1179684, 1, 0, 1179685, 0, 0, 1179686, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0 )

[node name="StartMenu" type="Control" parent="."]
modulate = Color( 0.0745098, 0.921569, 0.403922, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/CenterContainer"]
margin_left = 255.0
margin_top = 120.0
margin_right = 364.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 12.0
text = "The Essence of Water"
align = 1

[node name="Start" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 109.0
margin_bottom = 34.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectLevel" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 109.0
margin_bottom = 56.0
text = "(Coming Soon)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 109.0
margin_bottom = 78.0
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 109.0
margin_bottom = 100.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="CenterContainer" parent="."]
margin_top = 256.0
margin_right = 620.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 253.0
margin_top = 18.0
margin_right = 366.0
margin_bottom = 30.0
text = "Game by Marc Plarisan"

[node name="AboutMenu" type="Control" parent="."]
visible = false
modulate = Color( 0, 1, 0.788235, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="AboutMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="AboutMenu/CenterContainer"]
margin_left = 227.0
margin_top = 130.0
margin_right = 392.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="AboutMenu/CenterContainer/VBoxContainer"]
margin_right = 165.0
margin_bottom = 57.0
text = "About:
Game objective is to collect the
water drop before it evaporates
into thin air."
align = 1

[node name="Return" type="Button" parent="AboutMenu/CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 165.0
margin_bottom = 79.0
text = "Return to Main Menu"
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_pressed"]
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="AboutMenu/CenterContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
